// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base <BaseField /> matches snapshot 1`] = `
<input
  class="sc-fodVxV kubVCF"
  id="baseField"
  name="baseField"
  value=""
/>
`;

exports[`base <BaseField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="baseField"
      >
        Test*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="baseField"
          label="Test"
          name="baseField"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`base <BaseField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="baseField"
      >
        Test
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV kubVCF"
          id="baseField"
          label="Test"
          name="baseField"
          value=""
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`base <BaseRangeField /> matches snapshot 1`] = `
<input
  class="sc-bkzZxe hpQztk"
  id="baseRangeField"
  max="10000"
  min="300"
  name="baseRangeField"
  step="100"
  value="2000"
/>
`;

exports[`base <BaseRangeField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <div
        class="sc-crrsfI ieBApp"
      >
        <label
          for="baseRangeField"
        >
          Test
        </label>
        <div
          class="sc-fFubgz fJyOdk"
        >
          <input
            class="sc-bkzZxe hpQztk"
            id="baseRangeField"
            label="Test"
            max="10000"
            min="300"
            name="baseRangeField"
            step="100"
            value="2000"
          />
          <span
            class="sc-bBXqnf bwzWoF"
          >
            PLN
          </span>
        </div>
      </div>
      <div
        class="sc-lmoMRL hIjsuX"
      >
        <div
          aria-orientation="horizontal"
          aria-valuemax="10000"
          aria-valuemin="300"
          aria-valuenow="2000"
          class="rangeslider rangeslider-horizontal"
        >
          <div
            class="rangeslider__fill"
            style="width: 0px;"
          />
          <div
            class="rangeslider__handle"
            style="left: 0px;"
            tabindex="0"
          >
            <div
              class="rangeslider__handle-label"
            />
          </div>
          <ul
            class="rangeslider__labels"
          />
        </div>
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`base <BaseSelectField /> matches snapshot 1`] = `
<select
  class="sc-dIUggk hhFmtN"
  id="baseSelectField"
  name="baseSelectField"
  type="text"
>
  <option
    class="sc-dmlrTW hequYp"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="test1"
  >
    test1
  </option>
  <option
    value="test2"
  >
    test2
  </option>
</select>
`;

exports[`base <BaseSelectField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="baseSelectField"
      >
        Test
      </label>
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk hhFmtN"
          id="baseSelectField"
          label="Test"
          name="baseSelectField"
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="test1"
          >
            test1
          </option>
          <option
            value="test2"
          >
            test2
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
